# rust-i18n

./: CONTRIBUTING.md  Cargo.toml  Makefile  README.md  clippy.toml
.github/workflows/: ci.yml
benches/: bench.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/extract/: Cargo.toml
crates/extract/src/: extractor.rs  generator.rs
crates/macro/: Cargo.toml
crates/macro/src/: lib.rs
crates/support/: Cargo.toml
crates/support/src/: backend.rs  config.rs  deterministic.rs  lib.rs  minify_key.rs
examples/app-egui/: Cargo.toml
examples/app-load-path/: Cargo.toml
examples/app-metadata/: Cargo.toml
examples/app-minify-key/: Cargo.toml
examples/app-workspace/app1/: Cargo.toml
examples/app-workspace/crates/example-base/: Cargo.toml
examples/extend-crate/: README.md
examples/extend-crate/app/: Cargo.toml
examples/extend-crate/app-default/: Cargo.toml
examples/extend-crate/app-default/locales/: app.yml
examples/extend-crate/app-default/src/: main.rs
examples/extend-crate/app/locales/: app.yml
examples/extend-crate/app/src/: main.rs
examples/extend-crate/ui-component/: Cargo.toml
examples/extend-crate/ui-component/locales/: ui.yml
examples/extend-crate/ui-component/src/: lib.rs
examples/foo/: Cargo.toml  i18n.toml
examples/share-in-workspace/: Cargo.toml
src/: lib.rs
tests/: integration_tests.rs
