[package]
edition = "2021"
name = "foo"
version = "4.0.0-preview1"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-i18n = { path = "../.." }

[package.metadata.i18n]
available-locales = ["en", "zh-CN"]
default-locale = "en"
